fix overlap bug

--- a/sharpiemaker/styles.css
+++ b/sharpiemaker/styles.css
@@ -117,6 +117,7 @@ hr {
   margin-right: -80px;
   margin-top: -50px;
   user-select: none;
+  pointer-events: none;
 }
 
 .small-ratitude {
